--- a/briznichenkoProject/Classes/Sequences/LibrarySequence/LibrarySequence.storyboard
+++ b/briznichenkoProject/Classes/Sequences/LibrarySequence/LibrarySequence.storyboard
@@ -13,7 +13,7 @@
         <!--Space Objects-->
         <scene sceneID="lHQ-eB-cZj">
             <objects>
-                <viewController title="Space Objects" id="S6k-Tv-3vE" sceneMemberID="viewController">
+                <viewController title="Space Objects" id="S6k-Tv-3vE" customClass="SpaceObjectsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1cf-Au-7cG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -75,7 +75,7 @@
         <!--Near Earth Objects-->
         <scene sceneID="tJq-HN-lsT">
             <objects>
-                <viewController title="Near Earth Objects" id="OxH-D5-qUj" sceneMemberID="viewController">
+                <viewController title="Near Earth Objects" id="OxH-D5-qUj" customClass="NearEarthEventsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wmA-cT-OcC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -125,7 +125,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="library_cell" id="fak-Bv-vf0">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="library_cell" id="fak-Bv-vf0" customClass="LibraryCell">
                                         <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -142,7 +142,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Vn-YX-3oG">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <rect key="frame" x="-1" y="20" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem id="X7y-7y-G1M"/>
@@ -167,7 +167,7 @@
         <!--Earth Events-->
         <scene sceneID="m2Q-13-hhc">
             <objects>
-                <viewController title="Earth Events" id="3wt-4V-CPj" sceneMemberID="viewController">
+                <viewController title="Earth Events" id="3wt-4V-CPj" customClass="EarthEventsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zOo-ir-O9j">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
